Fixing title spacing in Related Products

--- a/ctcp.css
+++ b/ctcp.css
@@ -1,6 +1,6 @@
 /**
  * CSS styles for Coralturner.com customizations plugin
- * Version: 0.0.8
+ * Version: 0.0.9
  * (version above is equal with main plugin file version when this file was updated)
  */
  
@@ -62,6 +62,7 @@ body.woocommerce ul.products li.product .cover_long_description {
 body.woocommerce ul.products li.product .cover_long_description h2 {
     font-size: 16px;
 	color:white;
+	margin-top: 17px !important;
 }
 body.woocommerce ul.products li.product h2.woocommerce-loop-product__title a {
     font-family: Pacifico, cursive;
